# demo_c-

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  debug_dead_lock.cpp  define.cpp
IPC/: CMakeLists.txt
IPC/SharedMemory/: SharedMemory.cpp
NoahGameFrame/: CMakeLists.txt  NFGUID.h  NFIModule.h  NFIPlugin.h  NFIPluginManager.h  NFPlatform.h  NFPluginManager.cpp  NFPluginManager.h  NFPluginServer.cpp  NFPluginServer.h  NFServer.cpp  NFServer.puml
NoahGameFrame/Example/: Example.cpp  Example.h  ExampleModule.cpp  ExampleModule.h
NoahGameFrame/NFKernel/: NFKernelPlugin.cpp  NFKernelPlugin.h
NoahGameFrame/ThreadPool/: NFIThreadPoolModule.h  NFQueue.hpp  NFThreadPoolModule.cpp  NFThreadPoolModule.h
demo_cmake/: CMakeLists.txt
demo_cmake/MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cpp
demo_cmake/common/: CMakeLists.txt  IBase.cpp  IBase.h
demo_cmake/main/: Tutorial.cpp  TutorialConfig.h.in
