cmake_minimum_required(VERSION 3.16)
project(demo_cpp)
set(CMAKE_CXX_STANDARD 14)
set(SolutionDir ${PROJECT_SOURCE_DIR})
#SET(CMAKE_CXX_FLAGS_DEBUG "-lpthread")
add_executable(debug_dead_lock debug_dead_lock.cpp)
if(WIN32)
else()
    target_link_libraries(debug_dead_lock
            pthread)
endif()

add_subdirectory(NoahGameFrame)
add_subdirectory(IPC)
add_definitions(-std=c++11)
add_executable(def define.cpp)
