aux_source_directory(SharedMemory SharedMemorySrc)
add_executable(shared_memory
        ${SharedMemorySrc})
##
if(WIN32)
set(BOOST_ROOT h:/cam/c++/boost_1_73_0)
else()
set(BOOST_ROOT /cygdrive/h/cam/c++/boost_1_73_0)
endif()
set( Boost_USE_STATIC_LIBS ON )
set( Boost_USE_MULTITHREADED ON )
find_package(BOOST 1.73.0 COMPONENTS thread)
if(Boost_FOUND)
    message(Boost_INCLUDE_DIRS " ${Boost_INCLUDE_DIRS}")
    message(Boost_LIBRARY_DIRS " ${Boost_LIBRARY_DIRS}")
    include_directories(${Boost_INCLUDE_DIRS})
    link_libraries(${Boot_LIBRARY_DIRS})
endif()
if(WIN32)
    else()
    endif()
